--- a/package.json
+++ b/package.json
@@ -21,16 +21,19 @@
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-react": "^7.16.7",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.4",
-    "babel-loader": "^8.2.3",
     "css-loader": "^6.6.0",
     "css-minimizer-webpack-plugin": "^3.4.1",
     "express": "^4.17.2",
+    "express-list-routes": "^1.1.9",
     "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "^2.5.3",
     "morgan": "^1.10.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-loader-spinner": "^5.4.5",
     "react-refresh": "^0.11.0",
+    "react-use-keypress": "^1.3.1",
+    "regenerator-runtime": "^0.14.0",
     "sass": "^1.49.7",
     "sass-loader": "^12.4.0",
     "terser-webpack-plugin": "^5.3.1",
@@ -41,6 +44,11 @@
     "webpack-merge": "^5.8.0"
   },
   "devDependencies": {
+    "babel-core": "^6.26.3",
+    "babel-loader": "^9.1.3",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
     "dotenv": "^16.0.0",
     "eslint": "^8.8.0",
     "eslint-config-airbnb": "^19.0.4",
